TABLEAU EN PLACE

--- a/gescom.data/gescom.data/app.config
+++ b/gescom.data/gescom.data/app.config
@@ -3,7 +3,12 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="gescom.data.Properties.Settings.GESCOMConnectionString" connectionString="Data Source=THINK;Initial Catalog=GESCOM;Integrated Security=True" providerName="System.Data.SqlClient" />
+        <add name="gescom.data.Properties.Settings.GESCOMConnectionString"
+            connectionString="Data Source=THINK;Initial Catalog=GESCOM;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+        <add name="gescom.data.Properties.Settings.GESCOMConnectionString1"
+            connectionString="Data Source=THINK.PHOTO104.MG;Initial Catalog=GESCOM;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
